<resources>
    <string name="app_name">Famous Women</string>
    <string name="category_details">Description</string>
    <string name="category_quiz">Quiz</string>
    <string-array name="MariaC">
        <item>Maria Skłodowska-Curie</item>
        <item>Physicist and chemist</item>
        <item><![CDATA[Was a Polish and naturalized-French physicist and chemist who conducted pioneering
        research on radioactivity. She was the first woman to win a Nobel Prize, the first person and only woman to win twice, the only person to win
        a Nobel Prize in two different sciences, and was part of the Curie family legacy of five Nobel Prizes. She was also the first woman to become a
        professor at the University of Paris, and in 1995 became the first woman to be entombed on her own merits in the Panthéon in Paris.
        She was born in Warsaw, in what was then the Kingdom of Poland, part of the Russian Empire. She studied at Warsaw\'s clandestine Flying University
        and began her practical scientific training in Warsaw. In 1891, aged 24, she followed her older sister Bronisława to study in Paris, where she
        earned her higher degrees and conducted her subsequent scientific work. She shared the 1903 Nobel Prize in Physics with her husband Pierre Curie
        and with physicist Henri Becquerel. She won the 1911 Nobel Prize in Chemistry.]]></item>
    </string-array>
    <string-array name="DaliaG">
        <item>Dalia Grybauskaitė</item>
        <item>President of Lithuania</item>
        <item><![CDATA[Dalia Grybauskaitė (born in Vilnius on 1 March 1956), referred to as the \"Iron Lady\" or the \"Steel Magnolia\",
         is the President of Lithuania, inaugurated on 12 July 2009 and re-elected in May 2014.
        <br/>She is the country\'s first female President and the first President of Lithuania to be reelected for a second consecutive term. In her declaration speech for the 2009
        presidential election, Dalia Grybauskaitė said: \"I decided to return to Lithuania if the Lithuanian people decide I am needed there now.
        I think that we all long for the truth, transparency and responsibility for our country. We all want to live without fear, with confidence
        in ourselves, in each other, and in tomorrow. I can and I want to contribute with my experience, knowledge and skills to expel shadows from
        morality, politics, and economics to create a citizen-ruled Lithuania – a state of citizens. Therefore, I will run for the Lithuanian presidency.
        \" The international press was quick to dub her the \"Lithuanian Iron Lady\" for her outspoken speech and her black belt in karate.
        Dalia Grybauskaitė, who speaks Lithuanian, English, Russian, French and Polish, has mentioned Margaret Thatcher and Mahatma Gandhi as her
        political role models.
        <br/>She was Vice-Minister of Finance (from 1999 to 2000), Vice-Minister of Foreign Affairs (from 2000-2001) and Minister of Finance (from 2001 to 2004).
        Lithuania joined the European Union on 1 May 2004, and Dalia Grybauskaitė was named a European Commissioner on the same day.
        She initially served as European Commissioner for Education, Culture, Multilingualism and Youth. She held this position
        until 11 November 2004, when she was named European Commissioner for Financial Programming and the Budget within the José Manuel Barroso-led
        Commission. In November 2005, she was elected Commissioner of the Year for her efforts to reform the EU budget. Dalia Grybauskaitė never had
        dreamt of becoming president, but rather pursued her career to the highest possible level, working hard at every opportunity.
        Her determination led her to run for presidency and seemed at the time to be the natural progression of her career.
        <br/>On May 9, 2013 President Dalia Grybauskaitė was presented the prestigious International Charlemagne Prize. The award, also known as \"Oscar in Politics\",
        has been extended to President Grybauskaitė for Lithuania\'s contribution to uniting the European Union and building the economic stability
        of the whole Europe. \"I dedicate the Charlemagne Prize, awarded by the people of Aachen, to the Lithuanian people. It signifies the
        recognition of our united efforts as we fought for Lithuania\'s freedom and its place in Europe as well as to overcome the economic crisis.
        This award is also a commitment to assume responsibility for bringing all the nations together to shape the future of Europe,\" the President
        emphasized at the award ceremony.
        <br/>Dalia Grybauskaitė takes 68 place in Forbes The World\'s 100 Most Powerful Women list (2017 ranking).
        <br/>Today, Dalia is a modern leader and maintains a strong connection with the Lithuanian people through social media interaction,
        sharing her news, schedule and ideas.
        <br/>Sources:
        <br/>1. <a href= "https://en.wikipedia.org/wiki/Dalia_Grybauskait%C4%97">Wikipedia</a>;
        <br/>2. <a href= "https://www.lrp.lt/en/institution/president-dalia-grybauskaite/20797">The official President of the Republic of Lithuania page</a>.]]></item>
    </string-array>
    <string-array name="ElisabetaR">
        <item>Elisabeta Rizea</item>
        <item>Anti-Communist Partisant</item>
        <item><![CDATA[Elisabeta Rizea (28 June 1912 – 6 October 2003) was a Romanian anti-communist partisan in the
        Făgăraş Mountains of Northern Wallachia. After the Romanian Revolution, she became the symbol of Romania\'s anti-communism resistance.
        Rizea was born in Nucșoara, a small village in Argeş County in the Southern Carpathians, to a family of peasants who lived off plot of
        cultivated land. After World War II, as the Soviet Army imposed a Communist government in Romania, the peasants had to give up their
        land in order to implement collective farming. Out of opposition to this, Elisabeta Rizea and her husband joined an anti-Communist guerrilla
        group, Haiducii Muscelului, led by Colonel Gheorghe Arsenescu. Her assigned task within the group was to provide food and supplies.
        After she was captured by the Romanian militia in 1952, she was declared \"duşman al poporului\" (enemy of the people) and sentenced to
        death because she refused to give information about the other partisans. Eventually her sentence was commuted to seven years in prison.
        When Arsenescu was arrested in 1961, her sentence was extended by another 25 years, but three years later, in 1964, she was freed under
        the terms of a general amnesty.
        During her twelve years spent in prison, she was subjected to various forms of torture: she was hung by her hair from a hook and beaten
        until she fainted due to broken ribs, and was also scalped, burned, and beaten with a shovel. Upon her release from prison, she had no hair
        and she couldn\'t walk, as her knees had been destroyed by the torture.]]></item>
    </string-array>
    <string-array name="Theresa">
        <item>Mother Theresa</item>
        <item>Humanitarian</item>
        <item><![CDATA[Mother Teresa (1910–1997) was a Roman Catholic nun who devoted her life to serving
    the poor and destitute around the world. Mother Teresa was born in 1910 in Skopje, the capital of the Republic of Macedonia.
    Little is known about her early life, but at a young age, she felt a calling to be a nun and serve through helping the poor.
    <br/>At the age of 18, she was given permission to join a group of nuns in Ireland. After a few months of training, with the Sisters of Loreto,
    she was then given permission to travel to India. She took her formal religious vows in 1931 and chose to be named after St Therese of Lisieux –
    the patron saint of missionaries.On her arrival in India, she began by working as a teacher; however, the widespread poverty of Calcutta
    made a deep impression on her, and this led to her starting a new order called “The Missionaries of Charity”. The primary objective
    of this mission was to look after people, who nobody else was prepared to look after.
    <br/>In 1948, she left the convent to live full-time among the poorest of Calcutta. She chose to wear a white Indian sari,
    with a blue border, out of respect for the traditional Indian dress. For many years, Mother Teresa and a small band of fellow nuns
    survived on minimal income and food, often having to beg for funds. But, slowly her efforts with the poorest were noted and appreciated
    by the local community and Indian politicians. In 1952, she opened her first home for the dying, which allowed people to die with dignity.
    The Missionaries of Charity now has branches throughout the world including branches in the developed world where they work with the homeless
    and people affected by AIDS. In 1965, the organisation became an International Religious Family by a decree of Pope Paul VI.
    <br/>In the 1960s, the life of Mother Teresa was brought to a wider public attention by Malcolm Muggeridge who wrote a book
    and produced a documentary called “Something Beautiful for God”.In 1979, she was awarded the Nobel Peace Prize “for work undertaken
    in the struggle to overcome poverty and distress, which also constitutes a threat to peace.” She didn’t attend the ceremonial banquet
    but asked that the $192,000 fund be given to the poor. Over the last two decades of her life, Mother Teresa suffered various health problems,
    but nothing could dissuade her from fulfilling her mission of serving the poor and needy. Until her very last illness she was active
    in travelling around the world to the different branches of The Missionaries of Charity.
    <br/>Following Mother Teresa’s death, the Vatican began the process of beatification, which is the second step on the way to canonization and sainthood.
    Mother Teresa was formally beatified in October 2003 by Pope John Paul II.]]></item>
    </string-array>
    <string name="subheader_details_profession">Profession</string>
    <string name="body_details_description">Description</string>
    <string name="about_description">The Famous Women presents you some of the many strong and inspirational
        women of the world. It also contains a quiz to encourage you to learn more about them and have fun!
        \n\nThis application was made during the Udacity\'s Google Developer Challenge Scholarship: Android Basics program, edition 2017/2018.
        \n\nThe app was created on the initiative of the Women_Tech_Makers group.
        \n\nCoordinated by MalgoskaG  https://github.com/MalgoskaG/famous_women</string>
    <string name="about_contributions">All Contributors: https://github.com/MalgoskaG/famous_women/graphs/contributors</string>
    <string name="about_version">Version: 1.0</string>
</resources>