<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
            android:id="@+id/detail_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin_standard"
            android:layout_marginRight="@dimen/margin_standard"
            android:gravity="center_vertical"
            android:text="Name of the woman"
            android:textColor="@color/text_color_heading_white"
            android:textSize="@dimen/fontSize_subheading" />

        <TextView
            android:id="@+id/profession_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"

            android:layout_marginLeft="@dimen/margin_standard"
            android:layout_marginRight="@dimen/margin_standard"
            android:text="@string/subheader_details_profession"
            android:textColor="@color/text_color_heading"
            android:textSize="@dimen/fontSize_subheading" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="5">

    <TextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_standard"
            android:layout_marginRight="@dimen/margin_standard"
            android:text="@string/body_details_description"
        android:textColor="@color/text_color_main"
            android:textSize="@dimen/fontSize_body"/>

    </ScrollView>

    <TextView
        android:id="@+id/tv_quiz"
        style="@style/CategoryStyle"
        android:background="@color/primary_color"
        android:text="@string/category_quiz"/>

</LinearLayout>